# stGP-tutorial

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
Mouse_aging_brain/: MouseBrain_downstream.ipynb  MouseBrain_microglia.ipynb  downstream_cluster_Microglia.ipynb
Mouse_injured_kidney/: immune_L.ipynb  immune_R.ipynb
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  refs.bib  usage.rst
docs/source/_static/: my_theme.css
docs/source/tutorials/: index.rst
docs/source/tutorials/human_aging_dlpfc/: HumanBrain_ext.ipynb  HumanBrain_oli.ipynb  index.rst
docs/source/tutorials/mouse_aging_brain/: MouseBrain_downstream.ipynb  MouseBrain_microglia.ipynb  MouseBrain_proximity_enrich.ipynb  downstream_cluster_Microglia.ipynb  index.rst
docs/source/tutorials/mouse_injured_kidney/: Inj_PT_L.ipynb  Inj_PT_R.ipynb  immune_L.ipynb  immune_R.ipynb  index.rst  pseudotime_Inj_PT_L.ipynb  pseudotime_Inj_PT_R.ipynb
